--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -5,6 +5,7 @@
 			<createdBy>a été créé par</createdBy>
 			<editedBy>a été édité par</editedBy>
 			<system>le système</system>
+			<readmore>...Lire la suite.</readmore>
 		</messages>
 		<publicationStates>
 			<archived>Archivé</archived>
