CS-5435: Calendar activities : poor usability   * remove "More info" button as the content is not big to be collapsed.   * Change the title of calendar activities   * Declare author for the activity   * Process when the event is deleted.

--- a/integ-cs/integ-cs-social/src/main/resources/locale/cs/integration/integration_pt_BR.properties
+++ b/integ-cs/integ-cs-social/src/main/resources/locale/cs/integration/integration_pt_BR.properties
@@ -1,11 +1,12 @@
-CalendarUIActivity.msg.event-add=Um novo evento foi adicionado: {0}
-CalendarUIActivity.msg.event-update=O seguinte evento foi atualizado: {0}
-CalendarUIActivity.msg.task-add=Uma nova tarefa foi adicionada : {0}
-CalendarUIActivity.msg.task-update=A seguinte tarefa foi atualizada: {0}
+CalendarUIActivity.msg.event-add={0} added an event: {1}
+CalendarUIActivity.msg.event-update={0} has just updated the event: {1}
+CalendarUIActivity.msg.task-add={0} added a task: {1}
+CalendarUIActivity.msg.task-update={0} has just updated the task: {1}
 CalendarUIActivity.msg.event.label.description=Descri\u00e7\u00e3o:
 CalendarUIActivity.msg.event.label.location=Local:
 CalendarUIActivity.msg.event.label.start-time=Hora de in\u00edcio:
 CalendarUIActivity.msg.event.label.end-time=Hora de fim:
+CalendarUIActivity.msg.event-not-found=The data is not available at the moment.
 CalendarUIActivity.label.more-info=Mais informa\u00e7\u00f5es
 CalendarUIActivity.label.accept-invite=Aceitar
 CalendarUIActivity.label.refuse-invite=Recusar
