INTEG-25 Implement new document selector component for share document to activity.

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_en.properties
@@ -20,3 +20,9 @@ UIComposerDocumentExtension.label.Select_Document=Select Document
 UIComposerDocumentExtension.label.Download=Download
 UIComposerDocumentExtension.label.View_Document=View
 UIPopupWindow.title.UIOneNodePathSelector=Document Selector
+UIPopupWindow.title.UIDocActivitySelector=Select Document
+UIDocActivitySelector.msg.not-a-file=The file is not existing or some error occurred with selected file.
+UIComposer.msg.error.Must_select_document=You have to select document first.
+UIDocActivitySelector.label.cancel=Cancel
+UIDocActivitySelector.label.selectedfile=Select
+UIDSUploadInput.label.Upload=Upload
