--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -20,3 +20,9 @@ UIComposerDocumentExtension.label.Select_Document=Partager un Document
 UIComposerDocumentExtension.label.Download=Télécharger
 UIComposerDocumentExtension.label.View_Document=Voir
 UIPopupWindow.title.UIOneNodePathSelector=Sélecteur de documents
+UIPopupWindow.title.UIDocActivitySelector=Sélectionner un document
+UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont survenues.
+UIComposer.msg.error.Must_select_document=Vous devez sélectionner un document.
+UIDocActivitySelector.label.cancel=Annuler
+UIDocActivitySelector.label.selectedfile=Sélectionner
+UIDSUploadInput.label.Upload=Envoyer
