INTEG-85 | Stream - document link not available

--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_fr.properties
@@ -19,6 +19,7 @@ UIActivityComposer.label.UIDocActivityComposer=Fichier
 UIComposerDocumentExtension.label.Select_File=S\u00e9lectionner un fichier
 UIComposerDocumentExtension.label.Download=T\u00e9l\u00e9charger
 UIComposerDocumentExtension.label.View_File=Voir
+UIComposerDocumentExtension.label.Goto_Folder=Ouvrir le dossier
 UIPopupWindow.title.UIOneNodePathSelector=Choisir un fichier
 UIPopupWindow.title.UIDocActivitySelector=S\u00e9lectionner un fichier
 UIDocActivitySelector.msg.not-a-file=Le fichier n'existe pas ou des erreurs sont survenues.
