--- a/integ-cs/integ-cs-social/src/main/resources/locale/cs/integration/integration_pt_BR.properties
+++ b/integ-cs/integ-cs-social/src/main/resources/locale/cs/integration/integration_pt_BR.properties
@@ -1,22 +1,23 @@
-CalendarUIActivity.msg.event-add={0} added an event: {1}
-CalendarUIActivity.msg.event-update={0} has just updated the event: {1}
-CalendarUIActivity.msg.task-add={0} added a task: {1}
-CalendarUIActivity.msg.task-update={0} has just updated the task: {1}
+CalendarUIActivity.msg.event-add={0} adicionou um evento: {1}
+CalendarUIActivity.msg.event-update={0} acabou de atualizar um evento: {1}
+CalendarUIActivity.msg.task-add={0} adicionou uma tarefa: {1}
+CalendarUIActivity.msg.task-update={0} acabou de atualizar a tarefa: {1}
 CalendarUIActivity.msg.event.label.description=Descri\u00e7\u00e3o:
 CalendarUIActivity.msg.event.label.location=Local:
 CalendarUIActivity.msg.event.label.start-time=Hora de in\u00edcio:
 CalendarUIActivity.msg.event.label.end-time=Hora de fim:
-CalendarUIActivity.msg.event-not-found=The data is not available at the moment.
+CalendarUIActivity.msg.event-not-found=O dado n\u00e3o est\u00e1 dispon\u00edvel no momento.
+ContactUIActivity.msg.contact-add=Um novo contato foi adicionado: {0}
+ContactUIActivity.msg.contact-update=O seguinte contato foi atualizado: {0}
+ContactUIActivity.label.email=E-mail:
+ContactUIActivity.label.job-title=Cargo:
+ContactUIActivity.label.Phone=Telefone Celular:
 CalendarUIActivity.label.more-info=Mais informa\u00e7\u00f5es
 CalendarUIActivity.label.accept-invite=Aceitar
 CalendarUIActivity.label.refuse-invite=Recusar
 CalendarUIActivity.label.assign-to-me=Atribuir a mim
 CalendarUIActivity.label.need-action=Precisa de a\u00e7\u00e3o
 CalendarUIActivity.label.in-progress=Em progresso
-CalendarUIActivity.label.complete=Completo
+CalendarUIActivity.label.complete=Completar
 CalendarUIActivity.label.cancel=Cancelar
-ContactUIActivity.msg.contact-add=Um novo contato foi adicionado: {0}
-ContactUIActivity.msg.contact-update=O seguinte contato foi atualizado: {0}
-ContactUIActivity.label.email=Email:
-ContactUIActivity.label.job-title=T\u00edtulo do Emprego:
-ContactUIActivity.label.Phone=Telefone Celular:
+
