--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -1,24 +1,24 @@
-ForumUIActivity.label.add-post={0} a ajouté un nouveau poste: {1}
-ForumUIActivity.label.update-post={0} a mis à jour le poste: {1}
-ForumUIActivity.label.add-topic={0} a créé une nouvelle discussion: {1}
-ForumUIActivity.label.update-topic={0} a mis à jour la discussion: {1}
-ForumUIActivity.label.reply=Répondre
-ForumUIActivity.label.submit=Soumettre
+ForumUIActivity.label.add-post={0} a ajout\u00e9 un nouveau message: {1}
+ForumUIActivity.label.update-post={0} a mis \u00e0 jour le message: {1}
+ForumUIActivity.label.add-topic={0} a cr\u00e9\u00e9 une nouvelle discussion: {1}
+ForumUIActivity.label.update-topic={0} a mis \u00e0 jour la discussion: {1}
+ForumUIActivity.label.reply=R\u00e9pondre
+ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
-ForumUIActivity.msg.reply-success=Vous avez répondu à la discussion: {0}
+ForumUIActivity.msg.reply-success=Vous avez r\u00e9pondu au message: {0}
 ForumUIActivity.msg.reply-empty=Le titre du message est vide.
 
-AnswerUIActivity.label.answer-add={0} a répondu à la question: {1}
-AnswerUIActivity.label.answer-update={0} a mis à jour la réponse pour la question: {1}
-AnswerUIActivity.label.comment-add={0} a commenté pour la question: {1}
-AnswerUIActivity.label.comment-update={0} a mis à jour le commentaire sur la question: {1}
-AnswerUIActivity.label.question-add={0} a demandé: {1}
-AnswerUIActivity.label.question-update={0} a mis à jour la question: {1}
-AnswerUIActivity.label.button.answer=Répondre
+AnswerUIActivity.label.answer-add={0} a r\u00e9pondu \u00e0 la question: {1}
+AnswerUIActivity.label.answer-update={0} a mis \u00e0 jour la r\u00e9ponse pour la question: {1}
+AnswerUIActivity.label.comment-add={0} a comment\u00e9 pour la question: {1}
+AnswerUIActivity.label.comment-update={0} a mis \u00e0 jour le commentaire sur la question: {1}
+AnswerUIActivity.label.question-add={0} a demand\u00e9: {1}
+AnswerUIActivity.label.question-update={0} a mis \u00e0 jour la question: {1}
+AnswerUIActivity.label.button.answer=R\u00e9pondre
 AnswerUIActivity.label.button.comment=Commenter
 AnswerUIActivity.label.button.view=Voir
-AnswerUIActivity.label.button.submit=Soumettre
+AnswerUIActivity.label.button.submit=Valider
 AnswerUIActivity.label.language=Langue:
-AnswerUIActivity.label.quick-answer=Réponse rapide:
+AnswerUIActivity.label.quick-answer=R\u00e9ponse rapide:
 AnswerUIActivity.label.quick-comment=Commentaire rapide:
 AnswerUIActivity.msg.content-empty=Le message est vide.
