--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -20,3 +20,6 @@ CalendarUIActivity.label.need-action=Needs Action
 CalendarUIActivity.label.in-progress=In Progress
 CalendarUIActivity.label.complete=Complete
 CalendarUIActivity.label.cancel=Cancel
+
+
+CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
