--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -21,3 +21,4 @@ CalendarUIActivity.label.in-progress=En cours
 CalendarUIActivity.label.complete=Termin\u00e9e
 CalendarUIActivity.label.cancel=Annuler
 
+CalendarUIActivity.msg.summary_updated=Le sommaire a été mis à jour par: {0}.
