--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_es_ES.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_es_ES.properties
@@ -1,4 +1,7 @@
 WikiUIActivity.label.page-create={0} ha creado p\u00e1gina Wiki: {1}
 WikiUIActivity.label.page-update={0} has editado la p\u00e1gina Wiki: {1}
 WikiUIActivity.label.view-change=Ver los cambios
-
+WikiUIActivity.label.version=Version: 
+WikiUIActivity.msg.update-page-title=Page's title has been updated to: 
+WikiUIActivity.msg.update-page-content=Page's content has been edited.
+WikiUIActivity.msg.move-page=Page has been moved to: 
