--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_fr.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_fr.properties
@@ -1,3 +1,7 @@
 WikiUIActivity.label.page-create={0} a créé la page de Wiki: {1}
 WikiUIActivity.label.page-update={0} a édité la page de Wiki: {1}
 WikiUIActivity.label.view-change=Voir les changements
+WikiUIActivity.label.version=Version: 
+WikiUIActivity.msg.update-page-title=Page's title has been updated to: 
+WikiUIActivity.msg.update-page-content=Page's content has been edited.
+WikiUIActivity.msg.move-page=Page has been moved to: 
