CAL-143 update summary, description, location, priority

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -23,3 +23,9 @@ CalendarUIActivity.label.cancel=Cancel
 
 
 CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
+CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
+CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
+CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
+CalendarUIActivity.msg.allDay_updated=Event is now an all day event.
+CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
+CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
