--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -29,3 +29,10 @@ CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
 CalendarUIActivity.msg.allDay_updated=Event is now an all day event.
 CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
 CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
+CalendarUIActivity.msg.repeatType_updated=Event will be repeated each: {0}.
+CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
+CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
+CalendarUIActivity.msg.needs-action=Task needs action.
+CalendarUIActivity.msg.in-process=Task is in process.
+CalendarUIActivity.msg.completed=Task has been completed.
+CalendarUIActivity.msg.canceled=Task has been cancelled.
