CAL-143 fix allday, from, to, task status, update activity

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -26,12 +26,14 @@ CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
 CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
 CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
 CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
+CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
 CalendarUIActivity.msg.allDay_updated=Event is now an all day event.
 CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
 CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
 CalendarUIActivity.msg.repeatType_updated=Event will be repeated each: {0}.
 CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
 CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
+CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
 CalendarUIActivity.msg.needs-action=Task needs action.
 CalendarUIActivity.msg.in-process=Task is in process.
 CalendarUIActivity.msg.completed=Task has been completed.
