CAL-200 update message, fix check all day event and task

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -35,6 +35,6 @@ CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
 CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
 CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
 CalendarUIActivity.msg.needs-action=Task needs action.
-CalendarUIActivity.msg.in-process=Task is in process.
+CalendarUIActivity.msg.in-process=Task is in progress.
 CalendarUIActivity.msg.completed=Task has been completed.
 CalendarUIActivity.msg.canceled=Task has been cancelled.
