--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
@@ -22,3 +22,7 @@ AnswerUIActivity.label.language=Language:
 AnswerUIActivity.label.quick-answer=Quick answer:
 AnswerUIActivity.label.quick-comment=Quick comment:
 AnswerUIActivity.msg.content-empty=The message is empty.
+
+PollUIActivity.label.update_poll=Poll has been updated.
+PollUIActivity.label.vote_poll=Has voted for {0}.
+PollUIActivity.label.vote_again_poll=Has changed is voted for {0}.
