--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
@@ -23,3 +23,6 @@ AnswerUIActivity.label.quick-answer=Responder r\u00e1pido:
 AnswerUIActivity.label.quick-comment=Comentar r\u00e1pido:
 AnswerUIActivity.msg.content-empty=El mensaje est\u00e1 vac\u00edo.
 
+PollUIActivity.label.update_poll=Poll has been updated.
+PollUIActivity.label.vote_poll=Has voted for {0}.
+PollUIActivity.label.vote_again_poll=Has changed is voted for {0}.
