--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -22,3 +22,7 @@ AnswerUIActivity.label.language=Langue:
 AnswerUIActivity.label.quick-answer=R\u00e9ponse rapide:
 AnswerUIActivity.label.quick-comment=Commentaire rapide:
 AnswerUIActivity.msg.content-empty=Le message est vide.
+
+PollUIActivity.label.update_poll=[FR]Poll has been updated.
+PollUIActivity.label.vote_poll=[FR]Has voted for {0}.
+PollUIActivity.label.vote_again_poll=[FR]Has changed is voted for {0}.
