--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -23,3 +23,6 @@ AnswerUIActivity.label.quick-answer=Resposta r\u00e1pida:
 AnswerUIActivity.label.quick-comment=Coment\u00e1rio r\u00e1pido:
 AnswerUIActivity.msg.content-empty=A mensagem est\u00e1 vazia.
 
+PollUIActivity.label.update_poll=Poll has been updated.
+PollUIActivity.label.vote_poll=Has voted for {0}.
+PollUIActivity.label.vote_again_poll=Has changed is voted for {0}.
