CAL-200 [Activity type] 1 comment for multi changes and other requirements

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -21,4 +21,4 @@ CalendarUIActivity.label.in-progress=En cours
 CalendarUIActivity.label.complete=Termin\u00e9e
 CalendarUIActivity.label.cancel=Annuler
 
-CalendarUIActivity.msg.summary_updated=Le sommaire a été mis à jour par: {0}.
+CalendarUIActivity.msg.summary_updated=Le sommaire a \u00e9t\u00e9 mis \u00e0 jour par: {0}.
