INTEG-127 | Activity type improvement - fixed topic-link and applied resource bundle

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
@@ -7,6 +7,17 @@ ForumUIActivity.label.submit=Submit
 ForumUIActivity.label.view=View
 ForumUIActivity.msg.reply-success=you have replied to the post: {0}
 ForumUIActivity.msg.reply-empty=Title or message is empty.
+ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
+ForumUIActivity.forum.update-topic-content=Content has been edited.
+ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
+ForumUIActivity.forum.closed-topic=Topic has been closed.
+ForumUIActivity.forum.opened-topic=Topic has been opened.
+ForumUIActivity.forum.locked-topic=Topic has been locked.
+ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
+ForumUIActivity.forum.approved-topic=Topic has been approved.
+ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
+ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
+ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
 AnswerUIActivity.label.answer-add={0} has answered for question: {1}
 AnswerUIActivity.label.answer-update={0} has updated answer for question: {1}
