--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -7,6 +7,17 @@ ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
 ForumUIActivity.msg.reply-success=Vous avez r\u00e9pondu au message: {0}
 ForumUIActivity.msg.reply-empty=Le titre du message est vide.
+ForumUIActivity.forum.update-topic-title=(FR)Title has been updated to: {0}
+ForumUIActivity.forum.update-topic-content=(FR)Content has been edited.
+ForumUIActivity.forum.update-topic-rate=(FR)Rated the topic: {0}
+ForumUIActivity.forum.closed-topic=Topic has been closed.
+ForumUIActivity.forum.opened-topic=Topic has been opened.
+ForumUIActivity.forum.locked-topic=Topic has been locked.
+ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
+ForumUIActivity.forum.approved-topic=Topic has been approved.
+ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
+ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
+ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
 AnswerUIActivity.label.answer-add={0} a r\u00e9pondu \u00e0 la question: {1}
 AnswerUIActivity.label.answer-update={0} a mis \u00e0 jour la r\u00e9ponse pour la question: {1}
