--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -7,6 +7,17 @@ ForumUIActivity.label.submit=Enviar
 ForumUIActivity.label.view=Exibir
 ForumUIActivity.msg.reply-success=voc\u00ea respondeu ao post: {0}
 ForumUIActivity.msg.reply-empty=T\u00edtulo ou mensagem est\u00e1 vazia.
+ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
+ForumUIActivity.forum.update-topic-content=Content has been edited.
+ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
+ForumUIActivity.forum.closed-topic=Topic has been closed.
+ForumUIActivity.forum.opened-topic=Topic has been opened.
+ForumUIActivity.forum.locked-topic=Topic has been locked.
+ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
+ForumUIActivity.forum.approved-topic=Topic has been approved.
+ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
+ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
+ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
 AnswerUIActivity.label.answer-add={0} respondeu a quest\u00e3o: {1}
 AnswerUIActivity.label.answer-update={0} atualizou a resposta da quest\u00e3o: {1}
