INTEG-127 | Activity type improvement - fixed comment view, number replies, first 3 lines

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
@@ -3,6 +3,7 @@ ForumUIActivity.label.update-post={0} has updated a post: {1}
 ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
 ForumUIActivity.label.update-topic={0} has updated a topic: {1}
 ForumUIActivity.label.reply=Reply
+ForumUIActivity.label.lastReply=Last Post
 ForumUIActivity.label.submit=Submit
 ForumUIActivity.label.view=View
 ForumUIActivity.msg.reply-success=you have replied to the post: {0}
