INTEG-128 | Activity type improvement - Answers activity - Implement resource bundle with multi-updates

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration.properties
@@ -19,20 +19,20 @@ ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
 ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
 ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
-AnswerUIActivity.label.answer-add={0} has answered for question: {1}
-AnswerUIActivity.label.answer-update={0} has updated answer for question: {1}
-AnswerUIActivity.label.comment-add={0} has commented for question: {1}
-AnswerUIActivity.label.comment-update={0} has updated comment for question: {1}
-AnswerUIActivity.label.question-add={0} has asked: {1}
-AnswerUIActivity.label.question-update={0} has updated question: {1}
-AnswerUIActivity.label.button.answer=Answer
-AnswerUIActivity.label.button.comment=Comment
+AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
+AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
+AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
+AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
+AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
+AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
+AnswerUIActivity.label.answer-disapproved=Answer has been disapproved: {0}
+AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
+AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
+AnswerUIActivity.label.question-activated=Question has been activated.
+AnswerUIActivity.label.question-unactivated=Question has been unactivated.
+AnswerUIActivity.label.question-add-language=Question has been added in: {0}
+AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
 AnswerUIActivity.label.button.view=View
-AnswerUIActivity.label.button.submit=Submit
-AnswerUIActivity.label.language=Language:
-AnswerUIActivity.label.quick-answer=Quick answer:
-AnswerUIActivity.label.quick-comment=Quick comment:
-AnswerUIActivity.msg.content-empty=The message is empty.
 
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote_poll=Has voted for {0}.
