--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
@@ -19,20 +19,20 @@ ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
 ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
 ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
-AnswerUIActivity.label.answer-add={0} ha contestado la pregunta:{1}
-AnswerUIActivity.label.answer-update={0} ha actualizado la respuesta para la pregunta: {1}
-AnswerUIActivity.label.comment-add={0} ha comentado para la pregunta {1}:
-AnswerUIActivity.label.comment-update={0} actualiz\u00f3 el comentario para la pregunta: {1}
-AnswerUIActivity.label.question-add={0} ha preguntado: {1}
-AnswerUIActivity.label.question-update={0} ha actualizado la pregunta: {1}
-AnswerUIActivity.label.button.answer=Respuesta
-AnswerUIActivity.label.button.comment=Comentario
-AnswerUIActivity.label.button.view=Ver
-AnswerUIActivity.label.button.submit=Enviar
-AnswerUIActivity.label.language=idioma:
-AnswerUIActivity.label.quick-answer=Responder r\u00e1pido:
-AnswerUIActivity.label.quick-comment=Comentar r\u00e1pido:
-AnswerUIActivity.msg.content-empty=El mensaje est\u00e1 vac\u00edo.
+AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
+AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
+AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
+AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
+AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
+AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
+AnswerUIActivity.label.answer-disapproved=Answer has been disapproved: {0}
+AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
+AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
+AnswerUIActivity.label.question-activated=Question has been activated.
+AnswerUIActivity.label.question-unactivated=Question has been unactivated.
+AnswerUIActivity.label.question-add-language=Question has been added in: {0}
+AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
+AnswerUIActivity.label.button.view=View
 
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote_poll=Has voted for {0}.
