--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -19,20 +19,20 @@ ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
 ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
 ForumUIActivity.forum.update-post=Edited his reply to: {0}
 
-AnswerUIActivity.label.answer-add={0} respondeu a quest\u00e3o: {1}
-AnswerUIActivity.label.answer-update={0} atualizou a resposta da quest\u00e3o: {1}
-AnswerUIActivity.label.comment-add={0}comentou a quest\u00e3o: {1}
-AnswerUIActivity.label.comment-update={0} atualizou o coment\u00e1rio da quest\u00e3o: {1}
-AnswerUIActivity.label.question-add={0} perguntou: {1}
-AnswerUIActivity.label.question-update={0} atualizou quest\u00e3o: {1}
-AnswerUIActivity.label.button.answer=Responder
-AnswerUIActivity.label.button.comment=Comentar
-AnswerUIActivity.label.button.view=Exibir
-AnswerUIActivity.label.button.submit=Enviar
-AnswerUIActivity.label.language=Idioma:
-AnswerUIActivity.label.quick-answer=Resposta r\u00e1pida:
-AnswerUIActivity.label.quick-comment=Coment\u00e1rio r\u00e1pido:
-AnswerUIActivity.msg.content-empty=A mensagem est\u00e1 vazia.
+AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
+AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
+AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
+AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
+AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
+AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
+AnswerUIActivity.label.answer-disapproved=Answer has been disapproved: {0}
+AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
+AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
+AnswerUIActivity.label.question-activated=Question has been activated.
+AnswerUIActivity.label.question-unactivated=Question has been unactivated.
+AnswerUIActivity.label.question-add-language=Question has been added in: {0}
+AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
+AnswerUIActivity.label.button.view=View
 
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote_poll=Has voted for {0}.
