--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_BR.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_pt_BR.properties
@@ -19,6 +19,7 @@ UIActivityComposer.label.UIDocActivityComposer=Arquivo
 UIComposerDocumentExtension.label.Select_File=Selecionar o arquivo
 UIComposerDocumentExtension.label.Download=Baixar
 UIComposerDocumentExtension.label.View_File=Exibir
+UIComposerDocumentExtension.label.Version=Version
 UIPopupWindow.title.UIOneNodePathSelector=Seletor de arquivos
 UIPopupWindow.title.UIDocActivitySelector=Selecionar arquivo
 UIDocActivitySelector.msg.not-a-file=O arquivo n\u00e3o existe ou ocorreu algum erro com o arquivo selecionado.
