ECMS-4509 Activity-types In Content ECMS - Convert Activity Component to Service

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -13,7 +13,11 @@
       <attachmentRemoved>Des fichiers on été supprimés.</attachmentRemoved>
       <categoryAdded>La catégorie: {0} a été ajoutée.</categoryAdded>
       <categoryRemoved>La catégorie: {0} a été supprimée.</categoryRemoved>
-      <commentAdded>Un commentaire est ajouté à l'activitée</commentAdded>
+      <comment>
+        <commentAdded>Un commentaire est ajouté à l'activitée</commentAdded>
+        <commentModified>comment is updated in the activity</commentModified>
+        <commentRemoved>comment is removed from the activity</commentRemoved>
+      </comment>
       <stateChange>
         <pending>La publication est maintenant en attente.</pending>
         <approved>La publication a été approuvée.</approved>
