--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -13,7 +13,11 @@
 			<attachmentRemoved>File(s) has been removed.</attachmentRemoved>
 			<categoryAdded>Category: {0} has been added.</categoryAdded>
 			<categoryRemoved>Category: {0} has been removed.</categoryRemoved>
-			<commentAdded>comment is added to the activity</commentAdded>
+			<comment>
+        <commentAdded>comment is added to the activity</commentAdded>
+        <commentModified>comment is updated in the activity</commentModified>
+        <commentRemoved>comment is removed from the activity</commentRemoved>
+      </comment>
 			<stateChange>
   			<pending>Publication status is now pending.</pending>
   			<approved>Publication has been approved.</approved>
