--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -25,6 +25,7 @@
       </stateChange>
       <contentMoved>La publication a été déplacé: {0}</contentMoved>
       <revisionChanged>La publication a été restauré à la version: {0}</revisionChanged>
+      <version>Version: {0}</version>
     </messages>
     <publicationStates>
       <archived>Archivé</archived>
