--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -7,8 +7,12 @@
       <system>el sistema</system>
       <readmore>...Leer más.</readmore>
       <editTitle>Title has been updated to: {0}</editTitle>
+      <editDescription>Description has been updated to: {0}</editDescription>
       <editSummary>Summary has been updated to: {0}</editSummary>
       <editContent>Content has been updated.</editContent>
+      <singleCreator>Creator is {0}.</singleCreator>
+      <multiCreator>Creators are {0}.</multiCreator>
+      <removeCreator>Creator(s) {0} has been removed.</removeCreator>
       <attachmentAdded>File(s) has been attached.</attachmentAdded>
       <attachmentRemoved>File(s) has been removed.</attachmentRemoved>
       <categoryAdded>Category: {0} has been added.</categoryAdded>
@@ -24,6 +28,7 @@
         <published>Publication has been published.</published>
       </stateChange>
       <contentMoved>Publication has been moved to: {0}</contentMoved>
+      <fileMoved>File has been moved to: {0}</fileMoved>
       <revisionChanged>Publication has been restored to version: {0}</revisionChanged>
       <version>Version: {0}</version>
     </messages>
