--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -7,14 +7,22 @@
       <system>el sistema</system>
       <readmore>...Leer más.</readmore>
       <editTitle>Title has been updated to: {0}</editTitle>
-      <editDescription>Description has been updated to: {0}</editDescription>
-      <singleCreator>Creator is {0}</singleCreator>
-      <multiCreator>Creators are (0)</multiCreator>
+      <editDescription>Description has been updated to: {0}</editDescription>      
       <editSummary>Summary has been updated to: {0}</editSummary>
       <editContent>Content has been updated.</editContent>
       <singleCreator>Creator is {0}.</singleCreator>
       <multiCreator>Creators are {0}.</multiCreator>
       <removeCreator>Creator(s) {0} has been removed.</removeCreator>
+      
+      
+      
+      <removeTitle>Title has been removed.</removeTitle>
+      <removeSummary>Summary has been removed.</removeSummary>
+      <removeDescription>Description has been removed.</removeDescription>
+      <remmoveCreator>Creator has been removed.</remmoveCreator>
+      <removeContent>Content has been removed.</removeContent>
+      
+      
       <attachmentAdded>File(s) has been attached.</attachmentAdded>
       <attachmentRemoved>File(s) has been removed.</attachmentRemoved>
       <categoryAdded>Category: {0} has been added.</categoryAdded>
