INTEG-131: Activity type improvement - File activity

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -12,10 +12,14 @@
       <multiCreator>Creators are {0}</multiCreator>
 			<editSummary>Summary has been updated to: {0}</editSummary>
 			<editContent>Content has been updated.</editContent>
+			<singleSource>Source is {0}.</singleSource>
+      <multiSource>Sources are {0}.</multiSource>
+      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
+      <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
 			<removeTitle>Title has been removed.</removeTitle>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
-      <remmoveCreator>Creator has been removed.</remmoveCreator>
+      <removeCreator>Creator has been removed.</removeCreator>
       <removeContent>Content has been removed.</removeContent>
 			<attachmentAdded>File(s) has been attached.</attachmentAdded>
 			<attachmentRemoved>File(s) has been removed.</attachmentRemoved>
