--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -11,15 +11,15 @@
       <editSummary>Summary has been updated to: {0}</editSummary>
       <editContent>Content has been updated.</editContent>
       <singleCreator>Creator is {0}.</singleCreator>
-      <multiCreator>Creators are {0}.</multiCreator>
-      <removeCreator>Creator(s) {0} has been removed.</removeCreator>
-      
-      
+      <multiCreator>Creators are {0}.</multiCreator>      
+      <singleSource>Source is {0}.</singleSource>
+      <multiSource>Sources are {0}.</multiSource>      
+      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
       
       <removeTitle>Title has been removed.</removeTitle>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
-      <remmoveCreator>Creator has been removed.</remmoveCreator>
+      <removeCreator>Creator has been removed.</removeCreator>
       <removeContent>Content has been removed.</removeContent>
       
       
