--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -20,6 +20,7 @@
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
+      <removeSource>Source has been removed.</removeSource>
       <removeContent>Content has been removed.</removeContent>
 			<attachmentAdded>File(s) has been attached.</attachmentAdded>
 			<attachmentRemoved>File(s) has been removed.</attachmentRemoved>
