--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -20,6 +20,7 @@
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
+      <removeSource>Source has been removed.</removeSource>
       <removeContent>Content has been removed.</removeContent>
       
       
