INTEG-123 | Activity type improvement - Fix some bugs reported on issue

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -18,6 +18,10 @@ ForumUIActivity.forum.approved-topic=Topic has been approved.
 ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
 ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
 ForumUIActivity.forum.update-post=Edited his reply to: {0}
+ForumUIActivity.forum.add-poll=(FR)A poll has been added to the topic.
+ForumUIActivity.forum.update-poll=(FR)Poll has been updated.
+ForumUIActivity.forum.close-poll=(FR)Poll has been closed.
+ForumUIActivity.forum.remove-poll=(FR)Poll has been removed.
 
 AnswerUIActivity.label.answer-add=[FR]Answer has been submitted: {0}
 AnswerUIActivity.label.answer-update-content=[FR]Answer has been edited to: {0}
