--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
@@ -18,6 +18,10 @@ ForumUIActivity.forum.approved-topic=Topic has been approved.
 ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
 ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
 ForumUIActivity.forum.update-post=Edited his reply to: {0}
+ForumUIActivity.forum.add-poll=A poll has been added to the topic.
+ForumUIActivity.forum.update-poll=Poll has been updated.
+ForumUIActivity.forum.close-poll=Poll has been closed.
+ForumUIActivity.forum.remove-poll=Poll has been removed.
 
 AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
 AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
